--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,7 +1,4 @@
-<manifest
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.flutter.plugin.flutter_upgrader"
->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.flutter.plugin.flutter_mobile_upgrader">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 </manifest>
